2011-09-14  Andoni Morales Alastruey  <amorales@flumotion.com>

	* configure.ac:
	* flumotion/component/Makefile.am:
	* flumotion/component/consumers/Makefile.am:
	* flumotion/test/Makefile.am:
	Remove HLS components which are now part of flumotion

2011-08-31  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/plugs/multibitrate/multibitrate.py:
	mount point resource is already set by the component

2011-08-31  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/plugs/multibitrate/multibitrate.xml:
	Remove the 'required' bit from target-bitrate

2011-08-31  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/plugs/multibitrate/multibitrate.xml:
	uppps, bitrate property is part of compound property

2011-08-31  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/plugs/multibitrate/multibitrate.py:
	* flumotion/component/plugs/multibitrate/multibitrate.xml:
	Allow sorting playlist entries by target bitrate or user agent

2011-08-29  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/hlsring.py:
	target duration should be the duration of the longest clip in the
	playlist

2011-07-13  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
	Protect pad's info with lock (called from different gst threads)

2011-05-30  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/fmp4/fmp4.py:
	Add one more check for sync

2011-05-10  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/smoothstreamer/smoothstreamer.py:
	Fix the preroll calculation commit. The Quality objects are in the
	values of the dict instead of the values

2011-05-10  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/muxers/fmp4/fmp4.py:
	Fix sychronisation issues between video streams
